public/v/release-4.6/_sources/repositories_and_packages/isaac_ros_physical_ai/isaac_ros_unitree_g1_teleop_bringup/index.rst.txt
==============
|package_name|
==============

:ir_github:`<isaac_ros_physical_ai> <isaac_ros_unitree_g1_teleop_bringup>`

.. figure:: :ir_lfs:`<resources/isaac_ros_docs/repositories_and_packages/isaac_ros_physical_ai/isaac_ros_unitree_g1_teleop_bringup/unitree-g1-teleop-hero.gif>`
   :width: 520px
   :height: 293px
   :align: center
   :alt: Unitree G1 teleoperation with an XR headset

Overview
--------

Top-level launch file for Unitree G1 teleoperation combining AGILE locomotion, bimanual
inverse kinematics, and finger control. Supports XR teleoperation through
`Isaac Teleop <https://nvidia.github.io/IsaacTeleop>`__ and RViz interactive markers.

The application supports both simulation and real hardware.

Tutorial — Unitree G1 XR Teleop
--------------------------------

This tutorial walks through running whole-body XR teleoperation on the Unitree G1
humanoid robot. The application combines AGILE locomotion, bimanual inverse kinematics,
and finger control, all driven by an XR headset.

You first run the application in MuJoCo simulation, then deploy on real hardware.

Prerequisites
^^^^^^^^^^^^^

.. note::

   NVIDIA tested and qualified this tutorial on **Jetson AGX Thor** and **x86_64**
   for both simulation and real robot deployment.

- `PICO 4 Ultra <https://www.picoxr.com/global/products/pico4-ultra>`__ or
  `Meta Quest 3 <https://www.meta.com/quest/quest-3/>`__ headset (if no XR headset
  is available, use the emulator provided by `Isaac Teleop Core <https://nvidia.github.io/IsaacTeleop>`__
  instead)
- A stable network connection meeting the `CloudXR network requirements <https://docs.nvidia.com/cloudxr-sdk/latest/requirement/network_setup.html>`__
- Unitree G1 robot powered on and connected to the host machine through Ethernet

Set Up Development Environment
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. include:: /_snippets/set_up_dev_env.rst

Set Up Hardware
^^^^^^^^^^^^^^^

#. Set up the Intel RealSense camera by following the
   :doc:`RealSense setup tutorial </getting_started/sensors/realsense_setup>`.
   For Docker environments, the RealSense setup tutorial adds the ``realsense``
   Docker image key and rebuilds the Isaac ROS environment with
   ``isaac-ros activate --build-local``.

#. Set up the Unitree G1 with the host machine connected to it by following these guides:

   - `Unitree G1 Developer Guide <https://support.unitree.com/home/en/G1_developer/about_G1>`__
   - `Unitree G1 Quick Development <https://support.unitree.com/home/en/G1_developer/quick_development>`__

Build ``isaac_ros_unitree_g1_teleop_bringup``
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

*If you built your container with the* ``gr00t_workflow`` *Docker layer, you can skip step 1.*

#. Install and build ``isaac_ros_unitree_g1_teleop_bringup``:

   .. tabs::

      .. tab:: Binary Package

         #. Activate the Isaac ROS environment:

            .. code:: bash

               isaac-ros activate

         #. Install the prebuilt Debian package:

            :ir_apt:

            .. code:: bash

               sudo apt-get install -y ros-:ir_ros_distro:-isaac-ros-unitree-g1-teleop-bringup

         #. Install ``mujoco_ros2_control``:

            .. code:: bash

               sudo apt-get install -y ros-:ir_ros_distro:-mujoco-ros2-control
               source /opt/ros/:ir_ros_distro:/setup.bash

      .. tab:: Build from Source

         #. Install Git LFS:

            .. code:: bash

               sudo apt-get install -y git-lfs && git lfs install

         #. Clone this repository under ``${ISAAC_ROS_WS}/src``:

            .. code:: bash

               cd ${ISAAC_ROS_WS}/src && \
               git clone :ir_clone:`<isaac_ros_physical_ai>`

         #. Activate the Isaac ROS environment:

            .. code:: bash

               isaac-ros activate

         #. Use ``rosdep`` to install the package's dependencies:

            :ir_apt:

            .. code:: bash

               rosdep update && rosdep install --from-paths ${ISAAC_ROS_WS}/src/isaac_ros_physical_ai/isaac_ros_unitree_g1_teleop_bringup --ignore-src -y

         #. Build the package from source:

            .. code:: bash

               cd ${ISAAC_ROS_WS}/ && \
                  colcon build --symlink-install --packages-up-to isaac_ros_unitree_g1_teleop_bringup --base-paths ${ISAAC_ROS_WS}/src/isaac_ros_physical_ai/isaac_ros_unitree_g1_teleop_bringup

         #. Source the ROS workspace:

            .. note::

               Repeat this step in **every** terminal created inside the Isaac ROS environment. Because you built this package from source, you must source the enclosing workspace for ROS to find the package's contents.

            .. code:: bash

               source install/setup.bash

.. include:: /_snippets/cloudxr_server_setup.rst

.. _isaac-ros-unitree-g1-teleop-launch:

Launch the Application
^^^^^^^^^^^^^^^^^^^^^^

   .. tabs::

      .. tab:: MuJoCo Simulation

         #. Launch the teleop application:

            .. code:: bash

               ros2 launch isaac_ros_unitree_g1_teleop_bringup unitree_g1_teleop.launch.py \
                   hardware_type:=mujoco \
                   input_mode:=teleop \
                   cloudxr_accept_eula:=true

            This opens the MuJoCo viewer with the G1 robot. The virtual gantry holds the robot
            upright during startup. Press **G** to toggle the gantry on/off, and use **[** / **]**
            to shorten or lengthen the rope. It is recommended to disable the gantry once the robot
            is stable. The robot may oscillate at startup and will only stabilize once the controller
            is active.

            .. note::

               ``blend_ratio`` defaults to ``0.0``. After the controller is active,
               enable the policy with
               ``ros2 param set /safety_controller blend_ratio 1.0``.

         #. Connect the XR headset to the teleop server. In your headset's browser, open the
            `CloudXR web client <https://nvidia.github.io/IsaacTeleop/client/release-1.3.x/#/real/isaacros>`__ and follow the
            `headset connection guide <https://nvidia.github.io/IsaacTeleop/release/1.3.x/getting_started/quick_start.html#connect-an-xr-headset>`__.

            .. note::

               If the CloudXR runtime is running on Jetson, make sure to set the ``Video Codec`` to ``H.264``,
               otherwise the headset will fail to connect.

            .. warning::

               The world frame of the headset is defined as the position of the headset and controllers
               at the moment of connection. Stand still and face the robot before connecting to establish
               a consistent world frame. To reset the world frame, disconnect and reconnect the headset
               while stationary.

         #. With the controllers in your hands, start moving them. Verify that the robot's arms
            track your movements in the MuJoCo viewer.

            .. figure:: :ir_lfs:`<resources/isaac_ros_docs/repositories_and_packages/isaac_ros_physical_ai/isaac_ros_unitree_g1_teleop_bringup/unitree-g1-teleop-mujoco.gif>`
               :width: 650px
               :height: 513px
               :align: center
               :alt: Unitree G1 teleoperation in MuJoCo simulation

      .. tab:: Real Robot

         .. warning::

            Before operating on real hardware:

            #. Ensure the working area is free of any persons or other potential hazards.
            #. Always start with ``blend_ratio`` at ``0.0``. You can increase from ``0.0`` to ``1.0`` in a single step since the ratio is smoothed internally.
            #. Ensure the waist yaw joint is close to zero before launching. The controller does not actuate it and holds it at its current position, so a rotated torso can degrade balance.
            #. Have the disable command ready (refer to the **disable** step below).

         #. **Set up the network**. Clone ``isaac_ros_robots`` and run the setup script **outside** the docker container on the host machine:

            .. code:: bash

               cd ${ISAAC_ROS_WS}/src && \
                git clone :ir_clone:`<isaac_ros_robots>`

            Run the network setup script:

            .. code-block:: bash

               ${ISAAC_ROS_WS}/src/isaac_ros_robots/isaac_ros_robots_tools/scripts/setup_network.py

            The script interactively guides you through the network setup. Select
            the network interface that is physically connected to the G1 robot.
         #. **Launch the application**:

            .. code:: bash

               ros2 launch isaac_ros_unitree_g1_teleop_bringup unitree_g1_teleop.launch.py \
                   hardware_type:=real \
                   input_mode:=teleop \
                   cloudxr_accept_eula:=true \
                   network_interface:=<your_interface>

            Replace ``<your_interface>`` with the network interface you selected in the previous step.

         #. Connect the XR headset to the teleop server. In your headset's browser, open the
            `CloudXR web client <https://nvidia.github.io/IsaacTeleop/client/release-1.3.x/#/real/isaacros>`__ and follow the
            `headset connection guide <https://nvidia.github.io/IsaacTeleop/release/1.3.x/getting_started/quick_start.html#connect-an-xr-headset>`__.

            .. note::

               If the CloudXR runtime is running on Jetson, make sure to set the ``Video Codec`` to ``H.264``,
               otherwise the headset will fail to connect.

               Also when the application starts, the robot will not move because the ``blend_ratio`` defaults to ``0.0``.

               Verify that the XR commands are reaching the controller by running:

                .. code:: bash

                   ros2 topic echo /xr_teleop/ee_poses
                   ros2 topic echo /xr_teleop/root_twist
                   ros2 topic echo /xr_teleop/finger_joints

            .. warning::

               The world frame of the headset is defined as the position of the headset and controllers
               at the moment of connection. Stand still and face the robot before connecting to establish
               a consistent world frame. To reset the world frame, disconnect and reconnect the headset
               while stationary.

         #. **To disable the robot**, set the blend ratio back to zero:

            .. code:: bash

               ros2 param set /safety_controller blend_ratio 0.0


            Keep this command in your shell history so you can execute it quickly if something goes wrong.

         #. **Enable the robot** by setting the blend ratio:

            .. code:: bash

               ros2 param set /safety_controller blend_ratio 1.0

            The robot starts tracking your hand movements.

            .. figure:: :ir_lfs:`<resources/isaac_ros_docs/repositories_and_packages/isaac_ros_physical_ai/isaac_ros_unitree_g1_teleop_bringup/unitree-g1-teleop-real.gif>`
               :width: 340px
               :height: 489px
               :align: center
               :alt: Unitree G1 teleoperation on real hardware

            .. note::

               After several minutes of operation, the G1 hands may lower due to temperature limits. Allow the robot to cool down before resuming

.. warning::

   When operating real robot hardware, stop the robot (set ``blend_ratio`` to
   ``0.0``) before disconnecting the teleop application.

   If the XR headset disconnects at any point during teleoperation, the G1's hands hold their last commanded position.

.. include:: /repositories_and_packages/isaac_ros_teleop/_snippets/controller_reference.rst

API
---

Usage
^^^^^

.. code:: bash

   ros2 launch isaac_ros_unitree_g1_teleop_bringup unitree_g1_teleop.launch.py

Launch Arguments
^^^^^^^^^^^^^^^^

.. list-table::
   :header-rows: 1

   * - Launch Argument
     - Type
     - Default
     - Description
   * - ``hardware_type``
     - ``string``
     - ``mujoco``
     - Hardware platform. Options: ``mujoco`` (simulation), ``real`` (physical robot).
   * - ``input_mode``
     - ``string``
     - ``teleop``
     - Input source. Options: ``teleop`` (XR device through CloudXR), ``markers`` (RViz interactive markers).
   * - ``network_interface``
     - ``string``
     - ``eno1``
     - Network interface for G1 communication. Only used when ``hardware_type:=real``.
   * - ``enable_viewer``
     - ``bool``
     - ``true``
     - Enable MuJoCo GUI viewer. Only used when ``hardware_type:=mujoco``.
   * - ``use_rviz``
     - ``bool``
     - ``false``
     - Enable RViz visualization. The launch automatically sets this to ``true`` when ``input_mode:=markers``.
   * - ``use_foxglove``
     - ``bool``
     - ``false``
     - Start Foxglove bridge for remote monitoring.

ROS Topics
^^^^^^^^^^

Topics depend on the ``input_mode`` launch argument. In ``teleop`` mode:

.. list-table::
   :header-rows: 1

   * - ROS Topic
     - Interface
     - Description
   * - ``/xr_teleop/ee_poses``
     - ``geometry_msgs/PoseArray``
     - End-effector wrist poses from XR controllers
   * - ``/xr_teleop/root_twist``
     - ``geometry_msgs/TwistStamped``
     - Root velocity command from XR controllers
   * - ``/xr_teleop/head_pose``
     - ``geometry_msgs/PoseStamped``
     - Head pose from the XR headset
   * - ``/xr_teleop/finger_joints``
     - ``sensor_msgs/JointState``
     - Retargeted G1 TriHand finger joint angles from XR controller inputs
   * - ``/xr_teleop/controller_data``
     - ``std_msgs/ByteMultiArray``
     - Raw controller state encoded as msgpack (button, trigger, thumbstick, and pose data)

In ``markers`` mode:

.. list-table::
   :header-rows: 1

   * - ROS Topic
     - Interface
     - Description
   * - ``/ik_controller/reference_pose``
     - ``geometry_msgs/PoseArray``
     - End-effector poses published by the RViz interactive marker node

ROS Parameters
^^^^^^^^^^^^^^

.. list-table::
   :header-rows: 1

   * - Parameter
     - Node
     - Type
     - Default
     - Description
   * - ``blend_ratio``
     - ``/safety_controller``
     - ``double``
     - ``0.0``
     - Policy activation level (0.0–1.0). Dynamically adjustable at runtime.

Troubleshooting
---------------

.. include:: /repositories_and_packages/isaac_ros_physical_ai/_snippets/troubleshooting_g1_robot_state_timeout.rst

Test Without an XR Headset (Interactive Markers Mode)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

If the XR headset is unavailable or you want to isolate whether an issue is
with XR or the robot itself, launch with ``input_mode:=markers``:

.. code:: bash

   ros2 launch isaac_ros_unitree_g1_teleop_bringup unitree_g1_teleop.launch.py \
       input_mode:=markers

RViz opens automatically with six-degrees-of-freedom (6-DOF) interactive markers for each wrist.
The ``/ik_controller/reference_pose`` topic
replaces the ``/xr_teleop/ee_poses`` topic in this mode.

#. Publish to ``/cmd_vel`` to start the controller:

   .. code-block:: bash

      ros2 topic pub --rate 10 /cmd_vel geometry_msgs/msg/Twist \
          "{linear: {x: 0.0, y: 0.0, z: 0.0}, angular: {x: 0.0, y: 0.0, z: 0.0}}"

#. In the RViz **Displays** panel, find the **IK Target Marker** display and set
   its **Interactive Markers Namespace** to ``/ik_controller_marker``. You can
   then drag the wrist markers to command the arms.

Remote Monitoring with Foxglove
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

To visualize through Foxglove, add
``use_foxglove:=true`` to any launch command to start the Foxglove bridge:

.. code:: bash

   ros2 launch isaac_ros_unitree_g1_teleop_bringup unitree_g1_teleop.launch.py \
       use_foxglove:=true

Refer to :ref:`foxglove-setup` for instructions on connecting Foxglove Studio.

.. |package_name| replace:: ``isaac_ros_unitree_g1_teleop_bringup``
